[infra] Fix amper-from-sources to use the new JRE