@@ -32,6 +32,7 @@ set url=%~2
 set target_dir=%~3
 set sha=%~4
 set sha_size=%~5
+set show_banner_on_cache_miss=%~6
 
 set flag_file=%target_dir%\.flag
 if exist "%flag_file%" (
@@ -41,7 +42,7 @@ if exist "%flag_file%" (
 
 @rem This multiline string is actually passed as a single line to powershell, meaning #-comments are not possible.
 @rem So here are a few comments about the code below:
-@rem  - we need to support both .zip and .tar.gz archives (for the Amper distribution and the JBR)
+@rem  - we need to support both .zip and .tar.gz archives (for the Amper distribution and the JRE)
 @rem  - tar should be present in all Windows machines since 2018 (and usable from both cmd and powershell)
 @rem  - tar requires the destination dir to exist
 @rem  - We use (New-Object Net.WebClient).DownloadFile instead of Invoke-WebRequest for performance. See the issue
@@ -60,9 +61,16 @@ if (-not $createdNew) { ^
  ^
 try { ^
     if ((Get-Content '%flag_file%' -ErrorAction Ignore) -ne '%sha%') { ^
+        if ('%show_banner_on_cache_miss%' -eq 'true') { ^
+            Write-Host '*** Welcome to Amper v.%amper_version%! ***'; ^
+            Write-Host ''; ^
+            Write-Host 'This is the first run of this version, so we need to download the actual Amper distribution.'; ^
+            Write-Host 'Please give us a few seconds now, subsequent runs will be faster.'; ^
+            Write-Host ''; ^
+        } ^
         $temp_file = '%AMPER_BOOTSTRAP_CACHE_DIR%\' + [System.IO.Path]::GetRandomFileName(); ^
         [Net.ServicePointManager]::SecurityProtocol = [Net.SecurityProtocolType]::Tls12; ^
-        Write-Host 'Downloading %moniker%... (only happens on the first run of this version)'; ^
+        Write-Host 'Downloading %moniker%...'; ^
         [void](New-Item '%AMPER_BOOTSTRAP_CACHE_DIR%' -ItemType Directory -Force); ^
         if (Get-Command curl.exe -errorAction SilentlyContinue) { ^
             curl.exe -L --silent --show-error --fail --output $temp_file '%url%'; ^
@@ -114,29 +122,33 @@ REM ********** Provision JRE for Amper **********
 if defined AMPER_JAVA_HOME goto jre_provisioned
 
 @rem Auto-updated from syncVersions.main.kts, do not modify directly here
-set jbr_version=21.0.8
-set jbr_build=b1038.68
+set zulu_version=25.28.85
+set java_version=25.0.0
 if "%PROCESSOR_ARCHITECTURE%"=="ARM64" (
-    set jbr_arch=aarch64
-    set jbr_sha512=fb784bf1c0842ff788479e05d65e7d6e7c92545d006a753a158e3f00d17a52fe0f8e4b0aa6081fabe0443219682ec03f726daacd7bf2ea28ddd31bd3ae7b7f22
+    set pkg_type=jdk
+    set jre_arch=aarch64
+    set jre_sha256=f5f6d8a913695649e8e2607fe0dc79c81953b2583013ac1fb977c63cb4935bfb
 ) else if "%PROCESSOR_ARCHITECTURE%"=="AMD64" (
-    set jbr_arch=x64
-    set jbr_sha512=b59b6c9dd5194c93c3b8512e788fea08cef97e6c1b9108591f72ecdddc6fdbd95999db1e44b382cb5c74202b5ae016da5aa1c21883cefe50c23f8d2d0f3f7434
+    set pkg_type=jre
+    set jre_arch=x64
+    set jre_sha256=d3c5db7864e6412ce3971c0b065def64942d7b0f3d02581f7f0472cac21fbba9
 ) else (
     echo Unknown Windows architecture %PROCESSOR_ARCHITECTURE% >&2
     goto fail
 )
 
-@rem URL for JBR (vanilla) - see https://github.com/JetBrains/JetBrainsRuntime/releases
-set jbr_url=%AMPER_JRE_DOWNLOAD_ROOT%/cache-redirector.jetbrains.com/intellij-jbr/jbr-%jbr_version%-windows-%jbr_arch%-%jbr_build%.tar.gz
-set jbr_target_dir=%AMPER_BOOTSTRAP_CACHE_DIR%\jbr-%jbr_version%-windows-%jbr_arch%-%jbr_build%
-call :download_and_extract "JetBrains Runtime v%jbr_version%%jbr_build%" "%jbr_url%" "%jbr_target_dir%" "%jbr_sha512%" "512"
+@rem URL for the JRE (see https://api.azul.com/metadata/v1/zulu/packages?release_status=ga&include_fields=java_package_features,os,arch,hw_bitness,abi,java_package_type,sha256_hash,size,archive_type,lib_c_type&java_version=25&os=macos,linux,win)
+@rem https://cdn.azul.com/zulu/bin/zulu25.28.85-ca-jre25.0.0-win_x64.zip
+@rem https://cdn.azul.com/zulu/bin/zulu25.28.85-ca-jdk25.0.0-win_aarch64.zip
+set jre_url=%AMPER_JRE_DOWNLOAD_ROOT%/cdn.azul.com/zulu/bin/zulu%zulu_version%-ca-%pkg_type%%java_version%-win_%jre_arch%.zip
+set jre_target_dir=%AMPER_BOOTSTRAP_CACHE_DIR%\zulu%zulu_version%-ca-%pkg_type%%java_version%-win_%jre_arch%
+call :download_and_extract "Amper runtime v%zulu_version%" "%jre_url%" "%jre_target_dir%" "%jre_sha256%" "256" "false"
 if errorlevel 1 goto fail
 
 set AMPER_JAVA_HOME=
-for /d %%d in ("%jbr_target_dir%\*") do if exist "%%d\bin\java.exe" set AMPER_JAVA_HOME=%%d
+for /d %%d in ("%jre_target_dir%\*") do if exist "%%d\bin\java.exe" set AMPER_JAVA_HOME=%%d
 if not exist "%AMPER_JAVA_HOME%\bin\java.exe" (
-  echo Unable to find java.exe under %jbr_target_dir%
+  echo Unable to find java.exe under %jre_target_dir%
   goto fail
 )
 :jre_provisioned
@@ -161,12 +173,17 @@ if errorlevel 1 goto fail
 
 REM ********** Launch Amper from unpacked dist **********
 
-set jvm_args=-ea -XX:+EnableDynamicAgentLoading %AMPER_JAVA_OPTIONS%
+rem TODO generate the argfile in the unpacked distribution just like in the zipped distribution and use it here
 "%AMPER_JAVA_HOME%\bin\java.exe" ^
+  "-ea" ^
+  "-XX:+EnableDynamicAgentLoading" ^
+  "-XX:+UseCompactObjectHeaders" ^
+  "--enable-native-access=ALL-UNNAMED" ^
+  "--sun-misc-unsafe-memory-access=allow" ^
   "-Damper.wrapper.dist.sha256=%amper_sha256%" ^
   "-Damper.dist.path=%~dp0build\tasks\_amper-cli_buildUnpacked@amper-distribution\dist" ^
   "-Damper.wrapper.path=%~f0" ^
-  %jvm_args% ^
+  %AMPER_JAVA_OPTIONS% ^
   -cp "%~dp0build\tasks\_amper-cli_buildUnpacked@amper-distribution\dist\lib\*" ^
   org.jetbrains.amper.cli.MainKt ^
   --build-output="build-from-sources" ^
